--- a/demo/index.html
+++ b/demo/index.html
@@ -1,26 +1,26 @@
 <!doctype html>
 <html>
 <head>
-    <title>index - framebufferJS</title>
-    <meta charset="UTF-8">
-    <title>index - framebufferJS</title>
-    <link rel="stylesheet" type="text/css" href="css/demo.css">
+	<meta charset="UTF-8">
+	<title>index - lorez</title>
+	<link rel="stylesheet" type="text/css" href="css/demo.css">
 </head>
 <body>
 <div class="collumn">
-    <h1>framebufferJS</h1>
+	<h1>lorez</h1>
 
-    <h2>examples</h2>
+	<h2>examples</h2>
 
-    <p><a href="basic.html">basic</a> usage example using a browser global, a setInterval and default javascript renderer.</p>
+	<p><a href="basic.html">basic</a> usage example using a browser global, a setInterval and default javascript
+		renderer.</p>
 
-    <p><a href="fast.html">fast</a> version of basic usage with requestAnimationFrame, AMD and the WebGL output.</p>
+	<p><a href="fast.html">fast</a> version of basic usage with requestAnimationFrame, AMD and the WebGL output.</p>
 
-    <p><a href="fancy.html">fancy</a> using interesting drawing features and optional display tools.</p>
+	<p><a href="fancy.html">fancy</a> using interesting drawing features and optional display tools.</p>
 
-    <p><a href="explore.html">explore</a> the demo gallery.</p>
+	<p><a href="explore.html">explore</a> the demo gallery.</p>
 
-    <p>for more info see the readme at <a href="https://github.com/noffle/framebufferJS">github.com/noffle/framebufferJS</a></p>
+	<p>for more info see the readme at <a href="https://github.com/bartvds/lorez">github.com/bartvds/lorez</a></p>
 
 </div>
 </body>
