--- a/demo/index.html
+++ b/demo/index.html
@@ -18,6 +18,8 @@
 
 	<p><a href="fancy.html">fancy</a> using interesting drawing features and optional display tools.</p>
 
+	<p><a href="text.html">text</a> in micro font.</p>
+
 	<p><a href="explore.html">explore</a> the demo gallery.</p>
 
 	<p>for more info see the readme at <a href="https://github.com/bartvds/lorez">github.com/bartvds/lorez</a></p>
