--- a/demo/index.html
+++ b/demo/index.html
@@ -12,15 +12,15 @@
 	<h2>examples</h2>
 
 	<p><a href="basic.html">basic</a> usage example using a browser global, a setInterval and default javascript
-		renderer.</p>
+		renderer</p>
 
-	<p><a href="fast.html">fast</a> version of basic usage with requestAnimationFrame, AMD and the WebGL output.</p>
+	<p><a href="fast.html">fast</a> version of basic usage with requestAnimationFrame, AMD and the WebGL output</p>
 
-	<p><a href="fancy.html">fancy</a> using interesting drawing features and optional display tools.</p>
+	<p><a href="fancy.html">fancy</a> using interesting drawing features and optional display tools</p>
 
-	<p><a href="text.html">text</a> in micro font.</p>
+	<p><a href="text.html">text</a> in micro font</p>
 
-	<p><a href="explore.html">explore</a> the demo gallery.</p>
+	<p><a href="explore.html">explore</a> the demo gallery</p>
 
 	<p>for more info see the readme at <a href="https://github.com/bartvds/lorez">github.com/bartvds/lorez</a></p>
 
