--- a/demo/text.html
+++ b/demo/text.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>fancy - lorez</title>
+	<title>text - lorez</title>
 	<link rel="stylesheet" type="text/css" href="css/demo.css">
 </head>
 <body>
@@ -39,7 +39,7 @@
 			$fb.text(5, 10, 'nopqrstuvwxyz', white);
 			$fb.text(5, 15, '0123456789', white);
 			$fb.text(5, 20, '+-*/_\\.,!?', white);
-			$fb.text(5, 25, '<>[]()\'/"\\`~', white);
+			$fb.text(5, 25, '<>()[]\'/"\\`~', white);
 
 			$fb.render();
 		}
