added ImageLoader and Bitmap alpha blending

--- a/demo/explore.html
+++ b/demo/explore.html
@@ -35,9 +35,10 @@
 		};
 
 		var demos = [
-			'noise',
 			'frame32',
-			'movers'
+			'movers',
+			'noise',
+			'image'
 		];
 		var currentI = 0;
 		var demo = null;
