prepping for gh-pages

--- a/demo/basic.html
+++ b/demo/basic.html
@@ -10,7 +10,7 @@
 	What, no canvas support? D:
 </canvas>
 </body>
-<script src="../dist/lorez.js"></script>
+<script src="js/lorez.js"></script>
 <script type="text/javascript">
 
 	var $fb = new lorez.Stage({
