--- a/demo/explore.html
+++ b/demo/explore.html
@@ -17,7 +17,7 @@
 
 	requirejs.config({
 		paths: {
-			'lorez': '../dist/lorez',
+			'lorez': 'js/lorez',
 			'text': '//cdnjs.cloudflare.com/ajax/libs/require-text/2.0.10/text.min'
 		}
 	});
