--- a/demo/fast.html
+++ b/demo/fast.html
@@ -13,7 +13,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
 <script type="text/javascript">
 
-	require(['../dist/lorez'], function (lorez) {
+	require(['js/lorez'], function (lorez) {
 
 		var $fb = new lorez.Stage({
 			width: 160,
