--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="collumn">
 	<h1>lorez</h1>
 
-	<h2>examples</h2>
+	<h2>demos</h2>
 
 	<p><a href="basic.html">basic</a> usage example using a browser global, a setInterval and default javascript
 		renderer</p>
